log
Thu Apr 21 11:27:08 HSP 2022: 
 treemap.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
In file included from test.c:4:0:
treemap.c: In function 'createTreeMap':
treemap.c:40:20: error: too few arguments to function 'createTreeNode'
     TreeMap* new = createTreeNode();
                    ^~~~~~~~~~~~~~
treemap.c:29:12: note: declared here
 TreeNode * createTreeNode(void* key, void * value) {
            ^~~~~~~~~~~~~~
treemap.c:40:14: error: unused variable 'new' [-Werror=unused-variable]
     TreeMap* new = createTreeNode();
              ^~~
cc1.exe: all warnings being treated as errors
Compilation failed
d0f6b4c
Thu Apr 21 11:27:18 HSP 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|8
total_score: 0/70
240ef45
Thu Apr 21 11:28:33 HSP 2022: 
 treemap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:85:27: error: statement with no effect [-Werror=unused-value]
             tree->current == aux;
             ~~~~~~~~~~~~~~^~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
aaea1dd
Thu Apr 21 11:28:39 HSP 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|7
total_score: 10/70
b318995
Thu Apr 21 11:35:00 HSP 2022: 
 treemap.c | 9 +++++----
 1 file changed, 5 insertions(+), 4 deletions(-)
 tests:  11|6
total_score: 15/70
17762e3
Thu Apr 21 11:52:00 HSP 2022: 
 treemap.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
 tests:  11|6
total_score: 15/70
25f49dc
Thu Apr 21 11:54:59 HSP 2022: 
 treemap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|0
df362e7
Thu Apr 21 12:00:06 HSP 2022: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
cc79ef0
Thu Apr 21 12:01:53 HSP 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
644ee80
